updated the QR image path

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="set-card-center">
           <div class="card">
-            <img src="images\image-qr-code.png" alt="" class="qrImage">
+            <img src="qr-code-component-main\images\image-qr-code.png" alt="" class="qrImage">
             <div class="card-body">
                 <h3 class="card-title">Improve your front-end skills by building projects</h3>
                 <p>
